Se crea componente start-rating

--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -1,6 +1,8 @@
 <div class="card">
     <p>{{product.title}}</p>
     <img src={{product.image}}>
+    <p> € {{product.price}} </p>
+    <app-star-rating [rating]="product.rating.rate"></app-star-rating>
     <app-button-shopping [product]="product"></app-button-shopping>
 
 </div>
