Se crea pag detail, buttonShoppingCounter

--- a/src/app/components/list-products/list-products.component.html
+++ b/src/app/components/list-products/list-products.component.html
@@ -1,3 +1,4 @@
+<app-button-shopping-counter></app-button-shopping-counter>
 <ng-container *ngFor="let product of filter$ | async">
     <app-card-product [product]="product"></app-card-product>
   </ng-container>
