--- a/src/app/components/card-product/card-product.component.css
+++ b/src/app/components/card-product/card-product.component.css
@@ -5,6 +5,7 @@
   place-content: center;
   margin: 10px;
   text-align: center;
+  background-color: aquamarine;
 }
 .card img {
   object-fit: cover;
