--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" (click)="viewProductDetails()">
     <p>{{product.title}}</p>
     <img src={{product.image}}>
     <p> € {{product.price}} </p>
