--- a/src/app/components/card-product/card-product.component.scss
+++ b/src/app/components/card-product/card-product.component.scss
@@ -5,6 +5,7 @@
     place-content: center;
     margin: 10px;
     text-align: center;
+    background-color: aquamarine;
     
     img{
         object-fit: cover;
