Se modifica card shopping, se crea su respectiva interface, tambien se crea el modulo total

--- a/src/app/components/card-shopping/card-shopping.component.html
+++ b/src/app/components/card-shopping/card-shopping.component.html
@@ -1,1 +1,8 @@
-<p>{{product |json}}</p>
+<div>
+    <h3>{{ product.title }}</h3>
+    <p>Cantidad: {{ product.count }}</p>
+    <p>Precio: {{ product.price }}</p>
+    <p> {{product.count * product.price}}</p>
+  </div>
+
+  
