--- a/src/app/components/card-product/card-product.component.css
+++ b/src/app/components/card-product/card-product.component.css
@@ -1,14 +1,16 @@
 .card {
   width: 300px;
-  height: 400px;
+  height: 500px;
   display: grid;
   place-content: center;
   margin: 10px;
   text-align: center;
   background-color: aquamarine;
+  padding: 10px;
 }
 .card img {
-  object-fit: cover;
-  height: 200px;
+  object-fit: contain;
+  height: 250px;
+  width: 250px;
   justify-self: center;
 }/*# sourceMappingURL=card-product.component.css.map */
