--- a/src/app/components/list-products/list-products.component.html
+++ b/src/app/components/list-products/list-products.component.html
@@ -1,5 +1,8 @@
 <app-button-shopping-counter></app-button-shopping-counter>
-<ng-container *ngFor="let product of filter$ | async">
-    <app-card-product [product]="product"></app-card-product>
-  </ng-container>
-  
+<div class="listProducts">
+
+  <div  *ngFor="let product of filter$ | async">
+      <app-card-product [product]="product"></app-card-product>
+    </div>
+    
+</div>
