--- a/src/app/pages/datail/datail.component.html
+++ b/src/app/pages/datail/datail.component.html
@@ -5,3 +5,15 @@
     <p>{{ product.description }}</p>
     
   </div>
+
+  <div>
+    <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
+      <defs>
+        <pattern id="brick-pattern" width="40" height="20" patternUnits="userSpaceOnUse">
+          <rect width="20" height="20" fill="#BBADA0" />
+          <rect x="20" width="20" height="20" fill="#D5C3A2" />
+        </pattern>
+      </defs>
+      <rect width="100%" height="100%" fill="url(#brick-pattern)" />
+    </svg>
+  </div>
