Se da estilos a las card y se crea el componente filter, asi como tambien su respectivo servicio para las categorias

--- a/src/app/components/button-shopping-counter/button-shopping-counter.component.html
+++ b/src/app/components/button-shopping-counter/button-shopping-counter.component.html
@@ -1,2 +1,2 @@
-<button>counter</button>
-<button routerLink="/shopping"> {{counter$| async}}  </button>
+
+<button routerLink="/shopping" class="buyCar" [class.sticky]="isSticky"> {{counter$| async}}  </button>
