--- a/src/app/components/card-shopping/card-shopping.component.html
+++ b/src/app/components/card-shopping/card-shopping.component.html
@@ -1,8 +1,11 @@
-<div>
-    <h3>{{ product.title }}</h3>
-    <p>Cantidad: {{ product.count }}</p>
-    <p>Precio: {{ product.price }}</p>
-    <p> {{product.count * product.price}}</p>
+<div class="table" >
+    <p class="texLong">{{ product.title }}</p>
+    <p>{{ product.count }}</p>
+    <p>{{ product.price }}</p>
+    <p>{{product.count * product.price}}</p>
+    <app-button-remove [product]="product"></app-button-remove>
   </div>
+
+  
 
   
