--- a/src/app/pages/datail/datail.component.html
+++ b/src/app/pages/datail/datail.component.html
@@ -1,5 +1,7 @@
 <div>detail</div>
 
+<app-button-go-back></app-button-go-back>
+
 <div *ngIf="product">
     <h2>{{ product.title }}</h2>
     <p>{{ product.description }}</p>
