--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,12 +6,10 @@
     box-sizing: border-box;
    
   }
-  body{
-    background-image: url("/src/assets/wall.svg");
-  }
+  
 
 
-  h1,h2,h3 {
+  h1,h2,h3, button {
     font-family: 'Courgette', cursive;
 
   }
