Se crea el componente stripe y directivas para botones

--- a/src/app/components/button-remove/button-remove.component.html
+++ b/src/app/components/button-remove/button-remove.component.html
@@ -1,4 +1,4 @@
-<button class="buyCar" (click)="removeToShopping($event)" >
+<button appZoomColorHover class="buyCar" (click)="removeToShopping($event)" >
     x
     
 </button>
