--- a/src/app/components/button-shopping-counter/button-shopping-counter.component.html
+++ b/src/app/components/button-shopping-counter/button-shopping-counter.component.html
@@ -1,2 +1,2 @@
 
-<button routerLink="/shopping" class="buyCar" [class.sticky]="isSticky"> {{counter$| async}}  </button>
+<button appZoomColorHover routerLink="/shopping" class="buyCar" [class.sticky]="isSticky"> {{counter$| async}}  </button>
