--- a/src/app/components/button-shopping/button-shopping.component.html
+++ b/src/app/components/button-shopping/button-shopping.component.html
@@ -1,4 +1,4 @@
-<button class="buyCar" (click)="addToShopping($event)" >
+<button appZoomColorHover class="buyCar" (click)="addToShopping($event)" >
     +
     
 </button>
