--- a/src/app/components/card-shopping/card-shopping.component.scss
+++ b/src/app/components/card-shopping/card-shopping.component.scss
@@ -1,15 +1,18 @@
 .table{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
-    place-content: center;
+    place-content: baseline center;
     grid-template-rows: 50px;
-    text-align: center;
+    text-align:center;
     height: 70px;
    
 }
+.table:nth-child(5){
+    justify-self: center;
+}
 
 .texLong{
-    white-space: nowrap; /* Evita el salto de línea */
-    overflow: hidden; /* Oculta el contenido excedente */
-    text-overflow: ellipsis; /* Muestra puntos suspensivos al final */
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis; 
 }
