--- a/src/app/components/list-products/list-products.component.css
+++ b/src/app/components/list-products/list-products.component.css
@@ -4,4 +4,9 @@
   width: 100%;
   padding: 15px;
   justify-content: center;
+}
+
+.center {
+  display: grid;
+  place-content: center;
 }/*# sourceMappingURL=list-products.component.css.map */
