--- a/src/app/pages/datail/datail.component.html
+++ b/src/app/pages/datail/datail.component.html
@@ -1,21 +1,24 @@
-<div>detail</div>
+<div class="viewDetail">
 
-<app-button-go-back></app-button-go-back>
+  
+  <div class="container" *ngIf="product">
+    <div>
+      <img class="imgProduct" [src]="product.image">
+    </div>
+    <div class="infoProduct">
+      <h2>{{ product.title }}</h2>
+      <p>{{ product.category}}</p>
+      <p>{{ product.description }}</p>
+      <p appPinkBackground> € {{product.price}} </p>
+      <app-star-rating [rating]="product.rating.rate"></app-star-rating>
+      <app-button-go-back></app-button-go-back>
+      
 
-<div *ngIf="product">
-    <h2>{{ product.title }}</h2>
-    <p>{{ product.description }}</p>
-    
-  </div>
+      
+  
+    </div>
+    </div>
+</div>
 
-  <div>
-    <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
-      <defs>
-        <pattern id="brick-pattern" width="40" height="20" patternUnits="userSpaceOnUse">
-          <rect width="20" height="20" fill="#BBADA0" />
-          <rect x="20" width="20" height="20" fill="#D5C3A2" />
-        </pattern>
-      </defs>
-      <rect width="100%" height="100%" fill="url(#brick-pattern)" />
-    </svg>
-  </div>
+
+  
