--- a/src/app/pages/shooping/shooping.component.html
+++ b/src/app/pages/shooping/shooping.component.html
@@ -1,19 +1,24 @@
-<div class="table">
-  <h4>Product</h4>
-  <h4>Count</h4>
-  <h4>Unit Price</h4>
-  <h4>Subtotal</h4>
-  <h4>Remove</h4>
-</div>
-<ng-container *ngFor="let product of productCounts">
-  <app-card-shopping [product]="product" ></app-card-shopping>
+<div class="container">
+  <div class="table">
+    <h4>Product</h4>
+    <h4>Count</h4>
+    <h4>Unit Price</h4>
+    <h4>Subtotal</h4>
+    <h4>Remove</h4>
+  </div>
+  <ng-container *ngFor="let product of productCounts">
+    <app-card-shopping [product]="product" ></app-card-shopping>
+    
+  </ng-container>
   
-</ng-container>
+  <app-total [productCounts]="productCounts" ></app-total>
 
-<app-total [productCounts]="productCounts"></app-total>
+</div>
 
-<app-button-go-back></app-button-go-back>
-<app-button-pay></app-button-pay>
+
+
+
+
 
 
 
