--- a/src/app/pages/shooping/shooping.component.scss
+++ b/src/app/pages/shooping/shooping.component.scss
@@ -4,3 +4,10 @@
    text-align: center;
     place-content: center;
 }
+
+.container{
+    padding: 15px;
+    margin: 15px;
+    height: 100vh;
+
+}
