--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Libre+Baskerville&family=Montserrat:ital,wght@1,800&display=swap');
 /* You can add global styles to this file, and also import other style files */
+
+:root{
+  accent-color: #26A677 ;
+}
 *{
     margin: 0;
     padding: 0;
@@ -9,16 +13,21 @@
   
 
 
-  h1,h2,h3, button {
+  h1,h2,h3, h4, button {
     font-family: 'Courgette', cursive;
 
   }
 
-  p{
+  p, select{
     font-family: 'Libre Baskerville', serif;
 
   }
 
   .price{
     font-family: 'Montserrat', sans-serif;
+  }
+
+  button{
+    border: none;
+    background-color: transparent;
   }
